[package]
name = "ray-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.30.10", features = [ "android-game-activity" ] }
log = "0.4"
glam = "0.24.2"
vulkano = "0.35.1"
vulkano-util = "0.35.0"
vulkano-shaders = "0.35.0"
raytracing-util = { path = "../raytracing-util" }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.3"

[features]
default = []
desktop = []

[lib]
name = "main"
crate-type = ["cdylib"]

[[bin]]
name = "ray-query"
path="src/lib.rs"
required-features = [ "desktop" ]
