[package]
name = "weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.33.0"
vulkano-win = "0.33.0"
vulkano-util = "0.33.0"
log = "0.4"
winit = { version = "0.28.6", features = [ "android-game-activity" ] }
ash = "0.37.2"
bytemuck = "1.7.2"
rand = "0.8.4"
glam = "0.24.2"
weekend-shader = { path = "../weekend-shader" }

[build-dependencies]
spirv-builder = "0.9"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.3"

[features]
default = []
desktop = []

[lib]
name = "main"
crate_type = ["cdylib"]

[[bin]]
name = "weekend"
path="src/lib.rs"
required-features = [ "desktop" ]
